--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "framer-motion": "^12.11.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "popmotion": "^11.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.6",
     "valtio": "^2.1.4"
   },
   "devDependencies": {
