--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^12.11.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "popmotion": "^11.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-spring": "^10.0.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "swiper": "^11.2.6",
     "valtio": "^2.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/axios": "^0.14.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
