--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,5 @@ NEXTAUTH_SECRET=your-random-secret
 NEXTAUTH_URL=http://localhost:3000
 STEAM_API_KEY=670F5931879F13F06408A87E854AAABB
 NEXT_PUBLIC_STEAM_API_KEY=670F5931879F13F06408A87E854AAABB
-NEXT_PUBLIC_API_URL=http://localhost:3002/api
-# NEXT_PUBLIC_API_URL=https://team-der.ru/api
+# NEXT_PUBLIC_API_URL=http://localhost:3002/api
+NEXT_PUBLIC_API_URL=https://team-der.ru/api
