--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
     "popmotion": "^11.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
